# winsafe

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  ch.sh  crates.js  deploy.sh  doc.sh  features-chart.md  gh.sh  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js
examples/: README.md
examples/01_button_click/: Cargo.toml  README.md  build.rs
examples/01_button_click/res/: resources.rc
examples/01_button_click/src/: main.rs  my_window.rs
examples/01_empty_window/: Cargo.toml  README.md
examples/02_button_click/: README.md
examples/02_combo_and_radios/: Cargo.toml  README.md
examples/02_combo_and_radios/res/: resources.rc
examples/02_combo_and_radios/src/: main.rs  my_window.rs
res/: afxres.h  constants.h
resources/: resources.res
search.desc/winsafe/: winsafe-desc-0-.js  winsafe-desc-1-.js  winsafe-desc-2-.js  winsafe-desc-3-.js  winsafe-desc-4-.js
search.index/: 000009ef4d0b.js  000048df065d.js  000082d5a1a0.js  0000b704c719.js  0001750ce39e.js  00025759635b.js  00027a33013e.js  0003086e0d7d.js  0003545b4113.js  000431daaf81.js  0004db41f389.js  0005087dd473.js  0005969bb0df.js  0005cd73562b.js  00062604a83b.js  0006e7ec180a.js  0007324124af.js  0007a224edf2.js  0007c7dc2a1a.js  0008d6cd9b9a.js  00092b3eda1a.js  0009d5492367.js  000a9e040637.js  000b2559c912.js  000d3849b07b.js  000d787ffbea.js  000e00c294ba.js  000e0c5dba5c.js  000f1c2fc894.js  000f44f37016.js  0010a8c63ac1.js  001173706471.js  001317b47d6f.js  001348d58a31.js  001371813e.js  0013c88033b2.js  0014ad3b967d.js  00152205c379.js  00155d024008.js  001585071690.js  (+73861 more)
search.index/crateNames/: 22beae05e5.js
search.index/desc/: 0bf2ce0726a0.js  10ff18605dc6.js  26b8abbe167c.js  290f18bf820b.js  347f137658ad.js  3f872d45bf3d.js  4ee5cc6cb64e.js  50180b561bd5.js  52831d7042b5.js  54a00f49e5d8.js  55f4ad12bd28.js  562f12ea0f52.js  5a7b6adb4a9e.js  605b5e85d3fc.js  61c02f111cd3.js  6751b445650b.js  7c9e8e5e5886.js  7d8d2a29c6.js  8f44e9012ed9.js  90a66d7c4c62.js  92389c877c4f.js  935ee3dc7e.js  9ae537312e.js  af452c2b2644.js  b5c7644375.js  bfc872aaab.js  cb00d72179b9.js  d7d87a193409.js  db17145e36f8.js  e5f9b6364c.js  e946c1b837.js  eec41f48f1a4.js  f13b5b9087e2.js
search.index/entry/: 001b72d58e.js  0054e5e20479.js  02912196e89e.js  0471546e9a8e.js  056f840d466b.js  07852d64a419.js  0934107f6ff4.js  0996af025a5a.js  0c8c48574695.js  0ca5a347c2.js  0cf548ac8010.js  0d802db6fb8f.js  0ee0c7111771.js  10607c320c90.js  14cd026158.js  16e9297944.js  1734baad6b.js  1ef50dc128c3.js  1f95f2839ded.js  200e6a9f0338.js  205e4865b3.js  216d9765478c.js  221b0ac1dae9.js  2251be1ff4f2.js  227659462a.js  22e0d827d1.js  (+145 more)
src/: aliases.rs  dlg_main.rs  enums.rs  ffi_types.rs  file_repl.rs  funcs.rs  funcs_priv.rs  gather_stats.rs  ids.rs  internal_defs.rs  lib.md  lib.rs  macros.rs  main.rs  msg.md  priv_funcs.rs  privs.rs  stats.rs  structs.rs  sysdlg.rs  unions.rs  utf16.rs  w_string.rs
static.files/: rustdoc-198729e5.css  search-853ef39b.js  search-874d56868bf05518.js
winsafe/: all.html  enum.AccelMenuCtrl.html  enum.AddrStr.html  enum.AtomStr.html  enum.BmpIcon.html  enum.BmpIconCurMeta.html  enum.BmpIdbRes.html  enum.BmpInstId.html  enum.BmpPtrStr.html  enum.ClaimSecurityAttr.html  enum.ClrDefNone.html  enum.CurObj.html  enum.DisabPriv.html  enum.DispfNup.html  enum.DwmAttr.html  enum.Encoding.html  enum.FileAccess.html  enum.GmidxEnum.html  enum.HhCmd.html  enum.HttpInfo.html  enum.HwKbMouse.html  enum.HwndFocus.html  enum.HwndHmenu.html  enum.HwndPlace.html  enum.HwndPointId.html  enum.IcoMon.html  enum.IconId.html  enum.IconIdTd.html  enum.IconIdTdicon.html  enum.IconRes.html  enum.IdIdcStr.html  enum.IdIdiStr.html  enum.IdMenu.html  enum.IdObmStr.html  enum.IdOcrStr.html  enum.IdOicStr.html  enum.IdPos.html  enum.IdStr.html  enum.IdTdiconStr.html  enum.IdxCbNone.html  (+795 more)
(+7837 files in other folders)
