[package]
name = "winsafe-stats"
description = "Computes WinSafe library stats."
version = "1.0.0"
authors = ["Rodrigo Cesar de Freitas Dias <rcesar@gmail.com>"]
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1
#panic = "abort"

[dependencies]
winsafe = { path = "../winsafe", features = ["gui", "raw-dylib"] }

# https://doc.rust-lang.org/reference/linkage.html#static-and-dynamic-c-runtimes
# RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-pc-windows-msvc
