[package]
name = "winsafe"
version = "0.0.26"
authors = ["Rodrigo Cesar de Freitas Dias <rcesar@gmail.com>"]
description = "Windows API and GUI in safe, idiomatic Rust."
categories = ["api-bindings", "gui", "os::windows-apis"]
keywords = ["com", "ffi", "gui", "win32", "windows"]
license = "MIT"
repository = "https://github.com/rodrigocfd/winsafe"
readme = "README.md"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE.md", "/README.md"]
edition = "2024"
rust-version = "1.87"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
advapi = ["kernel"]
comctl = ["ole"]
dshow = ["oleaut"]
dwm = ["uxtheme"]
dxgi = ["ole"]
gdi = ["user"]
gui = ["comctl", "uxtheme"]
kernel = []
mf = ["oleaut"]
ole = ["user"]
oleaut = ["ole"]
psapi = ["kernel"]
raw-dylib = []
shell = ["oleaut"]
taskschd = ["oleaut"]
user = ["kernel"]
uxtheme = ["gdi", "ole"]
version = ["kernel"]
wininet = ["kernel"]
winspool = ["user"]

# Generate docs locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
